# new-python-import-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-3-10.yml  test-3-11.yml  test-3-12.yml  test-3-13.yml  test-3-14.yml  test-3-8.yml  test-3-9.yml  tests.yml
.zed/: settings.json  tasks.json
new_import_system/: .gitignore  README.md  __init__.py  get_top_level_package.py  p.py  pyproject.toml  run_external_tests.py
new_import_system.egg-info/: PKG-INFO  SOURCES.txt
new_import_system/__old__/: set_call_wrapper.py  set_getattr_wrapper.py
new_import_system/lib/: get_importers_stack.py  set_lazy_submodules.py
new_import_system/new_import_system/: LazyModule.py  P.py  __init__.py  get_importer_filepath.py  make_module_callable.py  set_dir_wrapper.py  set_lazy_submodules.py  timeit.py
new_import_system/new_import_system.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
new_import_system_tests/: README.md  run_external_tests.py
new_import_system_tests/0_simple_package/: pyproject.toml  test_from_outside.py
new_import_system_tests/0_simple_package/package/: test_from_inside.py
new_import_system_tests/1_nested_submodules_I/: pyproject.toml  test_from_outside.py
new_import_system_tests/2_nested_submodules_II/: pyproject.toml  test_from_outside.py
new_import_system_tests/3_callable_packages/: test_from_outside.py
new_import_system_tests/4_absurd_callable_packages/: pyproject.toml  (+1 more)
test/1_nested_submodules_I/: pyproject.toml  test_1_from_outside.py
test/1_nested_submodules_I/pkg1/: test_1_from_inside.py
test/1_nested_submodules_I/pkg1/submodule2/: fun21.py
(+36 files in other folders)
