[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "new_import_system"
version = "0.0.1"
authors = [ { name="Lele", email="maggiori.samuele@gmail.com" }, ]
description = "Overhaul the python import system"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

dependencies = []

[tool.setuptools]
packages = ["new_import_system"]

[tool.pytest.ini_options]
testpaths = ["../new_import_system_tests"]