[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "1_nested_submodules_I"
version = "0.0.1"
authors = [ { name="Lele", email="maggiori.samuele@gmail.com" }, ]
description = "test package"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"

dependencies = [
    # "new-import-system @ file:././new_import_system",
    "new-import-system @ file:../../new_import_system",
]
